# Minishell

./: .gitignore  CMakeLists.txt  Makefile
include/: analyser.h  builtin.h  cmd_token.h  envp.h  exec.h  lexer.h  line_lexer.h  mini_signal.h  minishell.h  parser.h  redirect.h  replace.h  router.h  token.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h
libft/srcs/convert/: ft_atoi.c  ft_atoll.c
libft/srcs/get_next_line/: get_next_line_utils.c
libft/srcs/memory/: free_string_array.c
libft/srcs/stdout/: ft_putendl.c
libft/srcs/string/: ft_strcat.c  ft_strcpy.c
src/: main.c  minishell_utils.c
src/analyser/cmd_lexer/cmd_token/: cmd_arg_utils.c  cmd_token_utils.c
src/analyser/cmd_parser/: cmd_parser.c
src/analyser/line_lexer/token/: token_add.c  token_clear.c
src/analyser/line_parser/: line_parser.c
src/analyser/replace/: replace.c  replace_cmd_utils.c  replace_env.c  replace_env_utils.c  split_arg_utils.c
src/analyser/replace/wildcards/: wildcards.c  wildcards_utils.c
src/envp/: dict.c  dict_sort.c  dict_utils.c  hashmap.c  hashtable.c  hashtable_display.c  hashtable_get_array.c  hashtable_utils.c  pwd.c  shlvl.c
src/exec/: exec.c  exec_cmd.c  exec_cmd_utils.c  exec_parenthesis.c  exec_pipe.c  exec_pipe_utils.c  exec_simple_cmd.c  exec_subshell.c  exec_subshell_utils.c  exec_utils.c
src/exec/builtin/: builtin_error.c
src/exec/builtin/cd/: cd.c
src/exec/builtin/echo/: echo.c
src/exec/builtin/env/: env.c
src/exec/builtin/eport/: export.c
src/exec/builtin/exit/: exit.c
src/exec/builtin/export/: export.c  export_no_args.c
src/exec/builtin/pwd/: pwd.c
src/exec/builtin/unset/: unset.c
src/exec/redirect/: redirect.c  redirect_utils.c
src/exec/redirect/append_out/: append_out.c
src/exec/redirect/here_doc/: here_doc.c  here_doc_get.c  here_doc_utils.c  replace_here_doc.c
src/exec/redirect/redirect_in/: redirect_in.c
src/exec/redirect/redirect_out/: redirect_out.c
src/exec/router/: router.c  router_utils.c
src/parsing/analyser/: analyser.c
src/parsing/cmd_lexer/: cmd_lexer.c
src/parsing/cmd_lexer/cmd_token/: cmd_arg_add.c  cmd_arg_utils.c  cmd_token_add.c  cmd_token_redirect_utils.c  cmd_token_utils.c
src/parsing/cmd_parser/: cmd_parser.c
src/parsing/cmd_parsing/: cmd_parsing.c
src/parsing/line_lexer/: add_line_token.c  line_lexer.c  token_add.c  token_clear.c
src/parsing/line_lexer/token/: token_add.c  token_clear.c  token_utils.c
src/parsing/line_parser/: error_line_parser.c  line_parser.c
src/parsing/replace/: replace.c  replace_cmd_utils.c  replace_env.c  replace_quotes.c  replace_ret_value.c  split_arg_utils.c
src/parsing/replace/wildcards/: wildcards.c  wildcards_utils.c
src/signal/: sig_handler.c  signal.c  termios.c
